# y3-deep-lss

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: config.yaml  dlss_config.yaml  resnet_debug.yaml  resnet_small.yaml  resnet_vanilla.yaml
configs/clustering_only/: resnet_vanilla.yaml
configs/delta_loss_debug/: dlss_config.yaml  resnet_debug_dist.yaml  resnet_debug_local.yaml
configs/deprecated/: dlss_config.yaml
configs/probe_combination/: dlss_config.yaml  resnet_small.yaml  resnet_vanilla.yaml
configs/v15/: deepsphere_default.yaml
configs/v16/: deepsphere_debug.yaml  deepsphere_default.yaml
deep_lss/apps/: run_evaluation.py  run_training.py  submit_training.sh
deep_lss/deprecated/: estimators.py
deep_lss/models/: base_model.py  delta_model.py  grid_model.py
deep_lss/nets/: __init__.py  custom_layers.py  gaussian_mixture.py  mlp.py  one_d_conv.py  regression_head.py  resnet.py  small_resnet_partial.py  transformer.py
deep_lss/utils/: abc.py  compression.py  configuration.py  delta_loss.py  distribute.py  emulator.py  eval.py  evaluation.py  gp_emulator.py  kernels.py  layers.py  likelihood_loss.py  mutual_info_loss.py  optimization.py  summary.py  utils.py
dev/notes/: benchmarks.md  commands.md  experiments.md  perlmutter.md
documentation/: TensorFlow2.15.md  commands.md  experiments.md  perlmutter.md
notebooks/: 2pt_train+eval.ipynb  tensorboard.ipynb
notebooks/deepsphere/: real_space_smoothing.ipynb  sparse_tensor_size.ipynb
notebooks/delta_loss/: distribute_debug.ipynb
notebooks/evaluation/: constraints.ipynb  mock_observation.ipynb  penultimate_layer.ipynb
notebooks/gpu_smoothing/: real_space_sparse_dense.ipynb  smoothing_layer.ipynb
notebooks/models/: base_model.ipynb  grid_model.ipynb
notebooks/nets/: base_model.ipynb  delta_model.ipynb  resnet.ipynb  resnet_size.ipynb  transformer.ipynb
scripts/: weights_and_biases.py
submissions/: commands.txt  training.sh
(+164 files in other folders)
